--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <b><li><a href="#">About</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Blog</a></li>
-        <li><a href="/contact.html">Contact</a></li></b>
+        <li><a href="tinahuii/contact.html">Contact</a></li></b>
     </ul>
         <h1>Hi, I'm Mochi</h1>
         <p>an aspiring games designer with interest in video games.</p>
