--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </ul>
         <h1>Hi, I'm Mochi</h1>
         <p>an aspiring games designer with interest in video games.</p>
+        <p style="page-break-before:always">
         <h2 id="contact">Contact</h2>
 </body>
 </html>
