--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <ul>
         <b><li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#contact">Contact</a></li></b>
     </ul>
         <h1>Hi, I'm Mochi</h1>
         <p>an aspiring games designer with interest in video games.</p>
         <p style="page-break-before:always">
+        <h2 id="porjects">Projects</h2>
+        <a href="/tinas-timeline.html">Tina's Timeline</a>
         <h2 id="contact">Contact</h2>
 </body>
 </html>
