--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li><a href="#">Blog</a></li>
         <li><a href="#contact">Contact</a></li></b>
     </ul>
-        <h1>Hi, I'm Mochi</h1>
+        <h1>Hi, I'm Athina</h1>
+        <h6>also known as Tina, Mochi and tinahuii.</h6>
         <p>an aspiring games designer with interest in video games.</p>
         <p style="page-break-before:always">
         <h2 id="porjects">Projects</h2>
