--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>an aspiring games designer with interest in video games.</p>
         <p style="page-break-before:always">
         <h2 id="porjects">Projects</h2>
-        <a href="/tinas-timeline.html">Tina's Timeline</a>
+        <a href="tinas-timeline.html">Tina's Timeline</a>
         <h2 id="contact">Contact</h2>
 </body>
 </html>
