--- a/index.html
+++ b/index.html
@@ -16,197 +16,64 @@
         <h1>Hi, I'm Athina</h1>
         <h4>also known as Tina, Mochi and tinahuii.</h4>
         <p>an aspiring games designer with interest in video games.</p>
-        <p style="page-break-before:always">
-        <h2 id="porjects">Projects</h2>
-        <main>
-            <div class='items'>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-0'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    X-rays
-                  </text>
-                  <g clip-path='url(#clip-0)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-xrays.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      X-rays
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-1'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    Worms
-                  </text>
-                  <g clip-path='url(#clip-1)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-worms.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      Worms
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-2'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    Aurora
-                  </text>
-                  <g clip-path='url(#clip-2)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-aurora.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      Aurora
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-3'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    Angus
-                  </text>
-                  <g clip-path='url(#clip-3)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-angus.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      Angus
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-4'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    Huitzi
-                  </text>
-                  <g clip-path='url(#clip-4)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-huitzi.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      Huitzi
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-5'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    Dalí
-                  </text>
-                  <g clip-path='url(#clip-5)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-dali.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      Dalí
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-6'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    The Bride
-                  </text>
-                  <g clip-path='url(#clip-6)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-bride.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      The Bride
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-7'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    The Man
-                  </text>
-                  <g clip-path='url(#clip-7)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-man.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      The Man
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-8'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    D
-                  </text>
-                  <g clip-path='url(#clip-8)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-d.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      D
-                    </text>
-                  </g>
-                </svg>
-              </div>
-              <div class='item'>
-                <svg preserveAspectRatio='xMidYMid slice' viewBox='0 0 300 200'>
-                  <defs>
-                    <clipPath id='clip-9'>
-                      <circle cx='0' cy='0' fill='#000' r='150px'></circle>
-                    </clipPath>
-                  </defs>
-                  <text class='svg-text' dy='.3em' x='50%' y='50%'>
-                    V
-                  </text>
-                  <g clip-path='url(#clip-9)'>
-                    <image height='100%' preserveAspectRatio='xMinYMin slice' width='100%' xlink:href='https://s3-us-west-2.amazonaws.com/s.cdpn.io/9473/i-v.png'></image>
-                    <text class='svg-masked-text' dy='.3em' x='50%' y='50%'>
-                      V
-                    </text>
-                  </g>
-                </svg>
-              </div>
+        <section id="projects">
+            <div id="projects-container">
+                <div id="projects-title">
+                    <h1>Projects</h1>
+                    <p>my work</p>
+                </div>
+                <ul id="project-list">
+                    <li class="project">
+                        <a class="project-name" href="https://tinahuii.github.io/tinahuii/tinas-timeline.html"><h1>Tina's Timeline</h1></a>
+                        <img class="project-backdrop" src="./" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" style="background-color: #e01111df;" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipartcraft.com%2Fimages%2Fdiscord-logo-transparent-better.png&f=1&nofb=1" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn0.iconfinder.com%2Fdata%2Ficons%2Fsecurity-16%2F100%2F09-512.png&f=1&nofb=1" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="./assets/LampShade.png" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="./assets/Xander.png" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="./assets/Tawjihi.png" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href="./elia/index.html"><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
+                    </li>
+                </ul>
             </div>
-          </main>
-        </div>
-        <div class='options'>
-          <button class='dark'></button>
-          <button class='light'></button>
-        </div>
+        </section>
         <a href="https://tinahuii.github.io/tinahuii/tinas-timeline.html">Tina's Timeline</a>
         <h2 id="contact">Contact</h2>
 </body>
