--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" style="background-color: #e01111df;" src="" alt="">
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
+                    </li>
+                    <li class="project">
+                        <a class="project-name" href=""><h1>N/A</h1></a>
+                        <img class="project-backdrop" src="" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
@@ -45,11 +53,7 @@
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fclipartcraft.com%2Fimages%2Fdiscord-logo-transparent-better.png&f=1&nofb=1" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn0.iconfinder.com%2Fdata%2Ficons%2Fsecurity-16%2F100%2F09-512.png&f=1&nofb=1" alt="">
+                        <img class="project-backdrop" src="" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
@@ -57,24 +61,20 @@
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="./assets/LampShade.png" alt="">
+                        <img class="project-backdrop" src="" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="./assets/Xander.png" alt="">
+                        <img class="project-backdrop" src="" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="./assets/Tawjihi.png" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href="./elia/index.html"><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="./assets/Smiley.jpg" alt="">
+                        <img class="project-backdrop" src="" alt="">
                     </li>
                 </ul>
             </div>
         </section>
-        <a href="https://tinahuii.github.io/tinahuii/tinas-timeline.html">Tina's Timeline</a>
         <h2 id="contact">Contact</h2>
+        <p>Twitter: @tinahuii</p>
 </body>
 </html>
