--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 </div>
                 <ul id="project-list">
                     <li class="project">
-                        <a class="project-name" href="https://tinahuii.github.io/tinahuii/tinas-timeline.html"><h1>Tina's Timeline</h1></a>
+                        <a class="project-name" href="https://tinahuii.github.io/tinahuii/project_poly.html"><h1>Project Poly</h1></a>
                         <img class="project-backdrop" src="./" alt="">
                     </li>
                     <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
+                        <a class="project-name" href=""><h1>Mei</h1></a>
+                        <img class="project-backdrop" src="./assets/mei.jpg" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
