--- a/project_poly.html
+++ b/project_poly.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Poly</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Tina's Timeline</h1>
+    <h1>Project Poly</h1>
 </body>
 </html>
