--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <img class="project-backdrop" src="./assets/mei.jpg" alt="">
                     </li>
                     <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
+                        <a class="project-name" href=""><h1>Tina's Timeline</h1></a>
+                        <img class="project-backdrop" src="./assets/tinas timeline.PNG" alt="">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>N/A</h1></a>
