--- a/project_poly.html
+++ b/project_poly.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <ul>
+        <b><li><a href="#">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#contact">Contact</a></li></b>
+    </ul>
     <h1>Project Poly</h1>
 </body>
 </html>
