--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>Hi, I'm Athina</h1>
         <h4>also known as Tina, Mochi and tinahuii.</h4>
         <p>an aspiring games designer with interest in video games.</p>
+        <img class="avatar" src="./assets/me.jpg" alt="me">
         <section id="projects">
             <div id="projects-container">
                 <div id="projects-title">
@@ -29,7 +30,7 @@
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>Mei</h1></a>
-                        <img class="project-backdrop" src="./assets/mei.jpg" alt="">
+                        <img class="project-backdrop" src="./assets/mei.jpg" alt="mei">
                     </li>
                     <li class="project">
                         <a class="project-name" href=""><h1>Tina's Timeline</h1></a>
