--- a/index.html
+++ b/index.html
@@ -7,75 +7,97 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <b><li><a href="#">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#contact">Contact</a></li></b>
-    </ul>
-        <h1>Hi, I'm Athina</h1>
-        <h4>also known as Tina, Mochi and tinahuii.</h4>
-        <p>an aspiring games designer with interest in video games.</p>
-        <img class="avatar" src="./assets/me.jpg" alt="me">
+    <section id="section">
+        <div id="title">
+            <div id="title-left">
+                <h1>Tinahuii</h1>
+                <p>my portfolio</p>
+                <!-- <img class="avatar-size" src="./assets/me.jpg" alt="me"> -->
+            </div>
+            <div id="title-right">
+                <ul id="nav">
+                    <li class="nav-item">
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#About">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#Contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#">???</a>
+                    </li>
+                </ul>                   
+            </div>
+        </div>
+    </section>
+    <center>
+    <h1>About</h1>
+    <h3>Hi, I'm Athina</h3>
+    <i>also known as Tina, Mochi, and tinahuii</i>
+        <p>an aspiring games designer with interest in video games</p>
+    </center>
         <section id="projects">
             <div id="projects-container">
-                <div id="projects-title">
-                    <h1>Projects</h1>
-                    <p>my work</p>
-                </div>
-                <ul id="project-list">
-                    <li class="project">
-                        <a class="project-name" href="https://tinahuii.github.io/tinahuii/project_poly.html"><h1>Project Poly</h1></a>
-                        <img class="project-backdrop" src="./" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>Mei</h1></a>
-                        <img class="project-backdrop" src="./assets/mei.jpg" alt="mei">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>Tina's Timeline</h1></a>
-                        <img class="project-backdrop" src="./assets/tinas timeline.PNG" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                    <li class="project">
-                        <a class="project-name" href=""><h1>N/A</h1></a>
-                        <img class="project-backdrop" src="" alt="">
-                    </li>
-                </ul>
-            </div>
+                <h1>Projects</h1>
+                <p>my work</p>
+            <ul id="project-list">
+                <li class="project">
+                    <a class="project-name" href="https://tinahuii.github.io/tinahuii/project_poly.html"><h1>Project Poly</h1></a>
+                    <img class="project-backdrop" src="./" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Mei</h1></a>
+                    <img class="project-backdrop" src="./assets/mei.jpg" alt="mei">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>Tina's Timeline</h1></a>
+                    <img class="project-backdrop" src="./assets/tinas timeline.PNG" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+                <li class="project">
+                    <a class="project-name" href=""><h1>N/A</h1></a>
+                    <img class="project-backdrop" src="" alt="">
+                </li>
+            </ul>
+        </div>
         </section>
-        <h2 id="contact">Contact</h2>
-        <p>Twitter: @tinahuii</p>
+        <section id="contact">
+            <h1>Contact</h1>
+            <p>Twitter: @tinahuii</p>
+        </section>
+
 </body>
 </html>
