--- a/project_poly.html
+++ b/project_poly.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul>
-        <b><li><a href="#">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#contact">Contact</a></li></b>
-    </ul>
     <h1>Project Poly</h1>
+    <h1>-</h1>
+    <p>Project Poly is a breath of fresh air for video game enthusiasts. This first-person shooter is set in a breezy, low-poly environment presented in an abstract approach.
+    This subgenre of shooter video games centres on a gun and other weapon-based combat in an immersive perspective. Player one enters the world as a single character where they
+    encounter different players and challenging mobs in a race to the top of the leaderboard.</p>
+    <p>The fast-paced and naturally lit environment presents a warm introduction for enthusiastic gamers (15+) as they progress in kill numbers for the overall result of a combat
+    score. Improve your skills and mechanics whilst playing this game, all whilst having fun!</p>
+    <p>hi</p>
 </body>
 </html>
