--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul id="project-list">
                 <li class="project">
                     <a class="project-name" href="https://tinahuii.github.io/tinahuii/project_poly.html"><h1>Project Poly</h1></a>
-                    <img class="project-backdrop" src="./" alt="">
+                    <img class="project-backdrop" src="./assets/project poly.PNG" alt="">
                 </li>
                 <li class="project">
                     <a class="project-name" href=""><h1>Mei</h1></a>
