--- a/project_poly.html
+++ b/project_poly.html
@@ -7,13 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <center>
     <h1>Project Poly</h1>
     <h1>-</h1>
+    <img src="./assets/project poly.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <p><i>disclaimer: assets are not mine!</i></p>
     <p>Project Poly is a breath of fresh air for video game enthusiasts. This first-person shooter is set in a breezy, low-poly environment presented in an abstract approach.
-    This subgenre of shooter video games centres on a gun and other weapon-based combat in an immersive perspective. Player one enters the world as a single character where they
-    encounter different players and challenging mobs in a race to the top of the leaderboard.</p>
+        This subgenre of shooter video games centres on a gun and other weapon-based combat in an immersive perspective. Player one enters the world as a single character where they
+        encounter different players and challenging mobs in a race to the top of the leaderboard.</p>
     <p>The fast-paced and naturally lit environment presents a warm introduction for enthusiastic gamers (15+) as they progress in kill numbers for the overall result of a combat
-    score. Improve your skills and mechanics whilst playing this game, all whilst having fun!</p>
-    <p>hi</p>
+        score. Improve your skills and mechanics whilst playing this game, all whilst having fun!</p>
+    <p>Project Poly has been planned and developed with consideration of previous FPS players who are looking for something different to play, or new PC players who want to try#
+        omething entertaining to occupy their time. The bright environment and the busy movement of enemies and mobs, players will never be bored in their epic combat.</p>
+    <p>Bright blue skies, and green grass. The best place to have the ultimate battle with your enemies. Hide behind the trees, or jump through the waterfall. Anywhere is a
+        battleground, and yours to take.</p>    
+    <img src="./assets/menu.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <img src="./assets/options.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <img src="./assets/credits.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <img src="./assets/in game.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    </center>
+
 </body>
 </html>
