--- a/project_poly.html
+++ b/project_poly.html
@@ -12,6 +12,8 @@
     <h1>-</h1>
     <img src="./assets/project poly.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
     <p><i>disclaimer: assets are not mine!</i></p>
+    <p><a href="#Supporting Information">Supporting Information</a></p>
+    
     <p>Project Poly is a breath of fresh air for video game enthusiasts. This first-person shooter is set in a breezy, low-poly environment presented in an abstract approach.
         This subgenre of shooter video games centres on a gun and other weapon-based combat in an immersive perspective. Player one enters the world as a single character where they
         encounter different players and challenging mobs in a race to the top of the leaderboard.</p>
@@ -25,6 +27,21 @@
     <img src="./assets/options.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
     <img src="./assets/credits.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
     <img src="./assets/in game.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <iframe src="https://youtu.be/51RVzCKI-7I" frameborder="0" style="width: 1000px; height: auto; margin-bottom: 20px;"></iframe>
+    <p><a href="https://youtu.be/51RVzCKI-7I">Link to video</a></p>
+
+    <h1>Supporting Information</h1>
+    <p>Computer games have always been an interest that I have strong passion towards, from as early as primary school. Having my mum's laptop allowed me to play games with friends
+        from school. This became an interest that I grew passionate towards when I got my first laptop at the end of primary school.</p>
+    <p>The games design course I am taking consists of written and practical coursework, which encourages creativity and productivity in and outside of class. I like to use unreal
+        engine and have started learning it to create my FPS game towards my vocational grade at the end of the academic year. I have done blueprinting, animating, and modelling in
+        relevance to my level design. Currently for my course I am working on animating the character in the game and making a functional gunplay experience.</p>
+    <p>Studying games design at a degree level would be an extremely huge and exciting step for me as I want to get in this industry. I play games often and therefore know and can
+        incorporate the fundamentals into my work. Once I am set something, I am determined to complete the task to the best standard.</p>
+    <p>Even though I have to work alone for my coursework, I am also able to work effectively as a team and I love exploring and sharing ideas within a group towards a project. My
+        communication skills have improved over the years and I am able to express my thoughts to others in a beneficial manner.</p>
+    <p>Throughout my education I have become familiar with Python, JavaScript, Python, and CSS, and think that these languages are important to learn towards making games. I have
+        looked at C#, however, have not gone into detail with the programming language.</p>
     </center>
 
 </body>
