--- a/project_poly.html
+++ b/project_poly.html
@@ -24,10 +24,16 @@
     <p>Bright blue skies, and green grass. The best place to have the ultimate battle with your enemies. Hide behind the trees, or jump through the waterfall. Anywhere is a
         battleground, and yours to take.</p>    
     <img src="./assets/menu.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <p>This is the widget I created for game, that allows the player to alternate between different options. The menu also has a play game button that is has a blueprint to take the
+        player to the level design I created previously.</p>
     <img src="./assets/options.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <p>The options was originally going to display the sound and display controls but I have not implemented this yet.</p>
     <img src="./assets/credits.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <p>The credits should display my name along with the names of the assets creators but I have not implemented this yet.</p>
     <img src="./assets/in game.PNG" alt="" style="width: 1000px; height: auto; margin-bottom: 20px;">
+    <p>This is what Project Poly looks like from the player's POV.</p>
     <iframe src="https://youtu.be/51RVzCKI-7I" frameborder="0" style="width: 1000px; height: auto; margin-bottom: 20px;"></iframe>
+    <p>Quick Project Poly gameplay.</p>
     <p><a href="https://youtu.be/51RVzCKI-7I">Link to video</a></p>
 
     <h1>Supporting Information</h1>
